@@ -1,3 +1,5 @@
++ "Nav - Toggle header/source" moved to IDE menu
+
 + --m TEA command line option to enable multiply instance mode
 + Prg menu:: Run program, Build program, Clean program
 
